// Sandpiper database diagram
// https://www.dbml.org/
// https://dbdiagram.io/

Enum "server_role_enum" {
  "primary"
  "secondary"
}

Enum "slice_type_enum" {
  "aces-file"
  "aces-items"
  "asset-files"
  "pies-file"
  "pies-items"
  "pies-marketcopy"
  "pies-pricesheet"
  "partspro-file"
}

Enum "encoding_enum" {
  "raw"
  "b64"
  "z64"
  "a85"
  "z85"
}

Table "companies" {
  "id" uuid [pk]
  "name" text [not null]
  "sync_addr" text [unique, not null]
  "sync_api_key" text
  "sync_user_id" int
  "active" boolean
  "created_at" timestamp
  "updated_at" timestamp

Indexes {
  `lower(name)` [unique]
}
}

Table "slices" {
  "id" uuid [pk]
  "name" text [not null]
  "slice_type" slice_type_enum [not null]
  "allow_sync" boolean
  "content_hash" text
  "content_count" integer
  "content_date" timestamp
  "created_at" timestamp
  "updated_at" timestamp

Indexes {
  `lower(name)` [unique]
}
}

Table "slice_metadata" {
  "slice_id" uuid
  "key" text
  "value" text

Indexes {
  (slice_id, key) [pk]
}
}

Table "tags" {
  "id" int [pk, increment]
  "name" text [unique, not null]
  "description" text
  "created_at" timestamp
  "updated_at" timestamp
}

Table "slice_tags" {
  "tag_id" int
  "slice_id" uuid

Indexes {
  (tag_id, slice_id) [pk]
}
}

Table "subscriptions" {
  "sub_id" uuid [pk]
  "slice_id" uuid [unique]
  "company_id" uuid [unique]
  "name" text [not null]
  "description" text
  "active" boolean
  "created_at" timestamp
  "updated_at" timestamp

Indexes {
  `lower(name)` [unique]
}
}

Table "grains" {
  "id" uuid [pk]
  "slice_id" uuid [unique]
  "grain_key" text [unique, not null]
  "encoding" encoding_enum
  "payload" text
  "source" text
  "created_at" timestamp
}

Table "activity" {
  "id" int [pk, increment]
  "sub_id" uuid
  "success" boolean
  "message" text [not null]
  "duration" timestamp
  "created_at" timestamp
}

Table "users" {
  "id" int [pk, increment]
  "username" text [unique, not null]
  "password" text
  "email" text [not null]
  "first_name" text [not null]
  "last_name" text [not null]
  "phone" text
  "active" boolean
  "last_login" timestamp
  "password_changed" timestamp
  "token" text
  "role" integer
  "company_id" uuid
  "created_at" timestamp
  "updated_at" timestamp
}

Table "settings" {
  "id" bool [pk, default: TRUE]
  "server_role" server_role_enum
  "server_id" uuid
  "created_at" timestamp
  "updated_at" timestamp
}

Ref:"slices"."id" < "slice_metadata"."slice_id" [delete: cascade]

Ref:"tags"."id" < "slice_tags"."tag_id" [delete: cascade]

Ref:"slices"."id" < "slice_tags"."slice_id" [delete: cascade]

Ref:"slices"."id" < "subscriptions"."slice_id" [delete: cascade]

Ref:"companies"."id" < "subscriptions"."company_id" [delete: cascade]

Ref:"slices"."id" < "grains"."slice_id" [delete: cascade]

Ref:"subscriptions"."sub_id" < "activity"."sub_id" [delete: cascade]

Ref:"companies"."id" < "users"."company_id" [delete: restrict]

Ref:"companies"."id" < "settings"."server_id" [delete: restrict]

Ref:"users"."id" < "companies"."sync_user_id" [delete: restrict]
